deploy: 4d3727f8e8810e9e1ac213198b38f6bfc3f6ec93

--- a/index.html
+++ b/index.html
@@ -427,6 +427,14 @@ by Andrew Watson</li>
 Waste</a> -
 by James O Coplien</li>
 </ul>
+<h2 id="week-11"><a class="header" href="#week-11">week 11</a></h2>
+<ol>
+<li>automatization</li>
+</ol>
+<h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
+<ol>
+<li>summary</li>
+</ol>
 
                     </main>
 
