--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -427,6 +427,14 @@ by Andrew Watson</li>
 Waste</a> -
 by James O Coplien</li>
 </ul>
+<h2 id="week-11"><a class="header" href="#week-11">week 11</a></h2>
+<ol>
+<li>automatization</li>
+</ol>
+<h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
+<ol>
+<li>summary</li>
+</ol>
 
                     </main>
 
