deploy: 7c76455a24af521804ac835f8f50fd948d0937fc

--- a/lectures/15_testing.html
+++ b/lectures/15_testing.html
@@ -537,7 +537,7 @@ production database in the production code</li>
 <img src="figures/publicdomainvectors/running-turtle.svg" width="300" />
 </div>
 </div>
-<h2 id="test-doubles--mock-objet-types"><a class="header" href="#test-doubles--mock-objet-types">test doubles – mock objet types</a></h2>
+<h2 id="test-doubles--mock-object-types"><a class="header" href="#test-doubles--mock-object-types">test doubles – mock object types</a></h2>
 <p>there is no open standard for categories</p>
 <div class="columns">
 <div class="column mt-2" width="40%">
