--- a/slides/15_testing.html
+++ b/slides/15_testing.html
@@ -572,8 +572,8 @@ width="300" /></p>
 </div>
 </div>
 </section>
-<section id="test-doubles-mock-objet-types" class="slide level2">
-<h2>test doubles – mock objet types</h2>
+<section id="test-doubles-mock-object-types" class="slide level2">
+<h2>test doubles – mock object types</h2>
 <p>there is no open standard for categories</p>
 <div class="columns">
 <div class="column mt-2" style="width:40%;">
