--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@ by James O Coplien</li>
 </ul>
 <h2 id="week-11"><a class="header" href="#week-11">week 11</a></h2>
 <ol>
+<li><a href="/software-engineering/slides/summary_week10.html">week 10 summary</a></li>
 <li>automatization</li>
 </ol>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
