deploy: 650cf48deb0d5d2c87dbbf4e4d0a81d378d61b7a

--- a/print.html
+++ b/print.html
@@ -7802,10 +7802,10 @@ necessarily wrong but could be problematic (Femmer et al., 2017)</p>
 <li>comments</li>
 <li>large class
 <ul>
-<li>possibly do more than on thing</li>
+<li>possibly do more than one thing</li>
 </ul>
 </li>
-<li>a function / class does more than on thing</li>
+<li>a function / class does more than one thing</li>
 </ul>
 <div class="text-smaller">
 <p>source: (Atwood, 2006)</p>
