--- a/slides/13_code_quality.html
+++ b/slides/13_code_quality.html
@@ -212,9 +212,9 @@ class="slide level2">
 <li>comments</li>
 <li>large class
 <ul>
-<li>possibly do more than on thing</li>
+<li>possibly do more than one thing</li>
 </ul></li>
-<li>a function / class does more than on thing</li>
+<li>a function / class does more than one thing</li>
 </ul>
 <div class="text-smaller">
 <p>source: <span class="citation"
