deploy: 8f51ee1f582f30794f9d04bfb477f138fd5c6853

--- a/print.html
+++ b/print.html
@@ -6677,8 +6677,8 @@ Guide</a></li>
 </div>
 </div>
 <h1 id="write-idiomatic-code"><a class="header" href="#write-idiomatic-code">write idiomatic code</a></h1>
-<div class="columns">
-<div class="column" width="70">
+<div class="columns column-gapless">
+<div class="column mt-1" width="70">
 <div class="text-align-left">
 <ul>
 <li>a prog. language implements a prog. paradigm</li>
@@ -6699,8 +6699,7 @@ Guide</a></li>
 <ul>
 <li>and languages have their own way of doing things
 <ul>
-<li>languages have pros and cons</li>
-<li>for a given problem</li>
+<li>languages have pros and cons for a given problem</li>
 </ul>
 </li>
 </ul>
