--- a/slides/12_clean_code.html
+++ b/slides/12_clean_code.html
@@ -190,8 +190,8 @@ TypeScript Style Guide</a></li>
 <section>
 <section id="write-idiomatic-code" class="title-slide slide level1">
 <h1>write idiomatic code</h1>
-<div class="columns">
-<div class="column" style="width:70;">
+<div class="columns column-gapless">
+<div class="column mt-1" style="width:70;">
 <div class="text-align-left">
 <ul>
 <li>a prog. language implements a prog. paradigm</li>
@@ -211,8 +211,7 @@ TypeScript Style Guide</a></li>
 <ul>
 <li>and languages have their own way of doing things
 <ul>
-<li>languages have pros and cons</li>
-<li>for a given problem</li>
+<li>languages have pros and cons for a given problem</li>
 </ul></li>
 </ul>
 </div>
