deploy: 58b3eba4dd4f41f0078adf10c0ae8cc525dc7a3a

--- a/lectures/07_c4.html
+++ b/lectures/07_c4.html
@@ -313,7 +313,7 @@ href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
 <div class="columns">
 <div class="column text-smaller" width="40%">
 <ul>
-<li>s where an instance of a software system is running e.g.,
+<li>shows where an instance of a software system is running e.g.,
 <ul>
 <li>physical infrastructure (e.g. a physical server or device)</li>
 <li>virtualised infrastructure,</li>
