deploy: 4fcb9fa2dcf07a568c15539ea2e20b7e03d522aa

--- a/slides/summary_week04.html
+++ b/slides/summary_week04.html
@@ -110,7 +110,7 @@ href="https://c4model.com/">c4model.com</a></p>
 <section id="level-1-system-context-diagram" class="slide level2">
 <h2>level 1: system context diagram</h2>
 <div class="columns">
-<div class="column mt-4" style="width:50%;">
+<div class="column mt-2" style="width:60%;">
 <ul>
 <li>shows how the software fits into the world
 <ul>
@@ -126,9 +126,13 @@ low-level details are not important</span></li>
 <li>similar to use case diagram</li>
 <li>understandable for non-technical people</li>
 </ul>
-</div><div class="column" style="width:50%;">
+</div><div class="column" style="width:40%;">
 <p><img data-src="figures/user_statistics/c4_system_context.drawio.svg"
 width="400" /></p>
+<div class="text-smaller">
+<p>other possible users:</p>
+<p>administrator, course planner</p>
+</div>
 </div>
 </div>
 </section>
