--- a/index.html
+++ b/index.html
@@ -434,6 +434,12 @@ by James O Coplien</li>
 <li><a href="/software-engineering/slides/summary_week10.html">week 10 summary</a></li>
 <li>automatization</li>
 </ol>
+<h3 id="readings-9"><a class="header" href="#readings-9">readings</a></h3>
+<ul>
+<li><a href="https://www.brightdevelopers.com/the-cost-of-interruption-for-software-developers/">The Cost of Interruption for Software
+Developers</a> -
+by Steven To</li>
+</ul>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
 <li>summary</li>
