--- a/slides/summary_week04.html
+++ b/slides/summary_week04.html
@@ -176,6 +176,27 @@ width="400" /></p>
 </section>
 <section id="level-4-code" class="slide level2">
 <h2>level 4: code</h2>
+<div class="columns">
+<div class="column" style="width:60%;">
+<ul>
+<li>optional level of detail</li>
+<li>ideally this diagram would be automatically generated</li>
+<li>if you really want or need to, you can zoom into an individual
+component
+<ul>
+<li>but show only those attributes and methods that really needed for
+the storytelling</li>
+</ul></li>
+<li>UML class diagram can be used</li>
+</ul>
+</div><div class="column" style="width:40%;">
+<figure>
+<img data-src="figures/user_statistics/class_3.svg" width="400"
+alt="this may be too much" />
+<figcaption aria-hidden="true">this may be too much</figcaption>
+</figure>
+</div>
+</div>
 </section></section>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
