deploy: 70ad0c5558b2e7342cea2368ad2ec8d09cded38d

--- a/slides/summary_week04.html
+++ b/slides/summary_week04.html
@@ -75,6 +75,8 @@ calc(100% - 1.25rem)" data-background-size="125px">
 <section id="what-is-the-issue-with-uml"
 class="title-slide slide level1">
 <h1>what is the issue with UML?</h1>
+<div class="columns">
+<div class="column mt-4" style="width:60%;">
 <ul>
 <li>closely connected with OOP</li>
 <li>propagates object-oriented modelling
@@ -82,6 +84,11 @@ class="title-slide slide level1">
 <li>however the design should not consider the implementation</li>
 </ul></li>
 </ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="figures/publicdomainvectors/paper-documents.svg"
+width="300" /></p>
+</div>
+</div>
 </section>
 
 <section>
@@ -166,11 +173,26 @@ width="400" /></p>
 <section id="level-3-component-diagram" class="slide level2">
 <h2>level 3: component diagram</h2>
 <div class="columns">
-<div class="column" style="width:50%;">
-
-</div><div class="column" style="width:50%;">
-<p><img data-src="figures/user_statistics/c4_component.excalidraw.svg"
-width="400" /></p>
+<div class="column" style="width:60%;">
+<ul>
+<li>decomposition of each container to identify the major structural
+building blocks and their interactions</li>
+<li>shows how a container is made up of a number of “components”
+<ul>
+<li>what these components are,</li>
+<li>what they are responsibilities for, and</li>
+<li>what also shows technology / implementation details</li>
+</ul></li>
+<li>roughly equivalent with the UML component diagram</li>
+</ul>
+</div><div class="column" style="width:40%;">
+<figure>
+<img data-src="figures/user_statistics/c4_component.excalidraw.svg"
+width="400"
+alt="the example shows the components of only one feature, so incomplete" />
+<figcaption aria-hidden="true">the example shows the components of only
+one feature, so incomplete</figcaption>
+</figure>
 </div>
 </div>
 </section>
