deploy: 86e7f981cd9c17df6963e1eac999f940b666ff8e

--- a/lectures/07_c4.html
+++ b/lectures/07_c4.html
@@ -156,6 +156,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="what-is-the-issue-with-uml"><a class="header" href="#what-is-the-issue-with-uml">what is the issue with UML?</a></h1>
+<div class="columns">
+<div class="column mt-4" width="60%">
 <ul>
 <li>closely connected with OOP</li>
 <li>propagates object-oriented modelling
@@ -164,6 +166,12 @@
 </ul>
 </li>
 </ul>
+</div>
+<div class="column" width="40%">
+<p><img src="figures/publicdomainvectors/paper-documents.svg"
+width="300" /></p>
+</div>
+</div>
 <h1 id="c4-model"><a class="header" href="#c4-model">C4 model</a></h1>
 <ul>
 <li>hierarchical set of software architecture diagrams
