--- a/print.html
+++ b/print.html
@@ -3839,6 +3839,8 @@ encyclopedia</em>.
 </div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="what-is-the-issue-with-uml"><a class="header" href="#what-is-the-issue-with-uml">what is the issue with UML?</a></h1>
+<div class="columns">
+<div class="column mt-4" width="60%">
 <ul>
 <li>closely connected with OOP</li>
 <li>propagates object-oriented modelling
@@ -3847,6 +3849,12 @@ encyclopedia</em>.
 </ul>
 </li>
 </ul>
+</div>
+<div class="column" width="40%">
+<p><img src="lectures/figures/publicdomainvectors/paper-documents.svg"
+width="300" /></p>
+</div>
+</div>
 <h1 id="c4-model"><a class="header" href="#c4-model">C4 model</a></h1>
 <ul>
 <li>hierarchical set of software architecture diagrams
