--- a/slides/07_c4.html
+++ b/slides/07_c4.html
@@ -56,6 +56,8 @@ calc(100% - 1.25rem)" data-background-size="125px">
 <section id="what-is-the-issue-with-uml"
 class="title-slide slide level1">
 <h1>what is the issue with UML?</h1>
+<div class="columns">
+<div class="column mt-4" style="width:60%;">
 <ul>
 <li>closely connected with OOP</li>
 <li>propagates object-oriented modelling
@@ -63,6 +65,11 @@ class="title-slide slide level1">
 <li>however the design should not consider the implementation</li>
 </ul></li>
 </ul>
+</div><div class="column" style="width:40%;">
+<p><img data-src="figures/publicdomainvectors/paper-documents.svg"
+width="300" /></p>
+</div>
+</div>
 </section>
 
 <section id="c4-model" class="title-slide slide level1">
