deploy: 32bd83026f6aca74bd27e360527cd6dec22b7dd3

--- a/print.html
+++ b/print.html
@@ -440,6 +440,11 @@ by James O Coplien</li>
 <li><a href="https://www.brightdevelopers.com/the-cost-of-interruption-for-software-developers/">The Cost of Interruption for Software
 Developers</a> -
 by Steven To</li>
+<li><a href="https://homes.cs.washington.edu/~mernst/advice/version-control.html">Version control concepts and best
+practices</a> -
+by Michael Ernst</li>
+<li><a href="https://roadmap.sh/devops/principles">11 DevOps Principles and Practices to Master: Pro
+Advice</a> - by Fernando Doglio</li>
 </ul>
 <h2 id="week-12"><a class="header" href="#week-12">week 12</a></h2>
 <ol>
